feat: swagger contract for films
